--- a/bin/template/bill.html
+++ b/bin/template/bill.html
@@ -26,11 +26,10 @@
                     <div class="clearfix"></div>
                 </div>
                 <div class="content_div">
-                    <p class="left_content">结算周期: <span>{{bill.settle_cycle}}</span></p>
-                    <p class="right_content">销售次数: <span>{{bill.settle_trainning_nums}}</span>次</p>
+                    <p class="left_content">结算周期: <span>{{bill.settle_cycle}}</span>月</p>
+                    <p class="right_content">共: <span>{{bill.settle_trainning_nums}}</span>次</p>
                     <div class="clearfix"></div>
                 </div>
-                <div class="clearfix"></div>
             </li>
         </ul>
 
