--- a/bin/template/bill.html
+++ b/bin/template/bill.html
@@ -21,12 +21,12 @@
         <ul class="js_one">
             <li v-cloak v-for="bill in allBills">
                 <div class="content_div">
-                    <p class="left_content">营收金额: <span>{{bill.settle_amt}}</span>元</p>
-                    <p class="right_content">门店分成: <span>{{bill.store_divide_amt}}</span>元</p>
+                    <p class="left_content">金额: <span>{{bill.settle_amt}}</span>元</p>
+                    <p class="right_content">分成: <span>{{bill.store_divide_amt}}</span>元</p>
                     <div class="clearfix"></div>
                 </div>
                 <div class="content_div">
-                    <p class="left_content">结算周期: <span>{{bill.settle_cycle}}</span>月</p>
+                    <p class="left_content">周期: <span>{{bill.settle_cycle}}</span>月</p>
                     <p class="right_content">共: <span>{{bill.settle_trainning_nums}}</span>次</p>
                     <div class="clearfix"></div>
                 </div>
