--- a/bin/template/dis_record.html
+++ b/bin/template/dis_record.html
@@ -30,6 +30,9 @@
             </li>
         </ul>
     </section>
+    <section class="section_nothing">
+        <p>门店还没有相关分配信息</p>
+    </section>
 </div>
 </body>
 <script src="/static/js/libs/require.2.3.3.min.js" type="text/javascript" data-main="/static/js/uyusys/dis_record.js" defer async="true"></script>
