--- a/bin/template/eye_sight.html
+++ b/bin/template/eye_sight.html
@@ -36,6 +36,10 @@
             </li>
         </ul>
     </section>
+
+    <section class="section_nothing">
+        <p>门店还没有相关试光师的信息</p>
+    </section>
 </div>
 </body>
 <script src="/static/js/libs/require.2.3.3.min.js" type="text/javascript" data-main="/static/js/uyusys/eye_sight.js" defer async="true"></script>
