--- a/bin/template/bill.html
+++ b/bin/template/bill.html
@@ -34,6 +34,9 @@
         </ul>
 
     </section>
+    <section class="section_nothing">
+        <p>门店还没有相关结算信息</p>
+    </section>
 </div>
 
 </body>
