--- a/bin/template/dev.html
+++ b/bin/template/dev.html
@@ -23,6 +23,10 @@
             </li>
         </ul>
     </section>
+    <section class="section_nothing">
+        <p>门店还没有相关设备信息</p>
+    </section>
+
 </div>
 </body>
 <script src="/static/js/libs/require.2.3.3.min.js" type="text/javascript" data-main="/static/js/uyusys/dev.js" defer async="true"></script>
