添加按钮事件

--- a/bin/template/eye_sight_info.html
+++ b/bin/template/eye_sight_info.html
@@ -14,11 +14,10 @@
 </head>
 <body>
 <div id="wap" class="js_regin_index">
-
     <section class="section_find">
         <ul>
             <li>
-                <input class="text js_input_text js_search_phone" type="text" value="" placeholder="请用户的手机号" />
+                <input class="text js_input_text js_search_phone" type="text" value="" placeholder="请输入试光师手机号" />
                 <div class="js_search">
                     <span>查找</span>
                 </div>
@@ -29,26 +28,30 @@
 
     <section class="section_info">
         <dl class="hang">
-            <dt class="js_shop_name_key">用户<span class="right_arrow"><i class="i_normal">!</i></span></dt>
+            <dt class="js_shop_name_key">用户名<span class="right_arrow"><i class="i_normal">!</i></span></dt>
             <dd>
-                <input type="button" class="text js_input_text consumer_name" value="" /></input>
+                <input class="text js_input_text eye_sight_name"/>
             </dd>
         </dl>
+
+        <dl class="hang">
+            <dt>昵称<span class="right_arrow"><i class="i_normal">!</i></span></dt>
+            <dd>
+                <input class="text js_input_text eye_sight_nickname"></input>
+            </dd>
+        </dl>
+
         <dl class="hang">
             <dt>手机号<span class="right_arrow"><i class="i_normal">!</i></span></dt>
             <dd>
-                <input type="button" class="text js_input_text consumer_phone" value=""></input>
+                <input class="text js_input_text eye_sightr_phone"></input>
             </dd>
         </dl>
-        <dl class="hang">
-            <dt class="js_shop_name_key">增加训练次数<span class="right_arrow"><i class="i_normal">!</i></span></dt>
-            <dd>
-                <input class="text js_input_text consumer_buy_times" type="text" value="" placeholder="请输入次数" />
-            </dd>
-        </dl>
+
     </section>
+
     <section class="section_footer">
-        <span class="content_sub js_add_eyesight">添加到我们门店</span>
+        <span class="content_sub js_bottom_button_action">添加到门店</span>
     </section>
 </div>
 </body>
