--- a/bin/template/eye_sight_info.html
+++ b/bin/template/eye_sight_info.html
@@ -30,21 +30,21 @@
         <dl class="hang">
             <dt class="js_shop_name_key">用户名<span class="right_arrow"><i class="i_normal">!</i></span></dt>
             <dd>
-                <input class="text js_input_text eye_sight_name"/>
+                <input type="button" class="text js_input_text eye_sight_name"/>
             </dd>
         </dl>
 
         <dl class="hang">
             <dt>昵称<span class="right_arrow"><i class="i_normal">!</i></span></dt>
             <dd>
-                <input class="text js_input_text eye_sight_nickname"></input>
+                <input  type="button" class="text js_input_text eye_sight_nickname"></input>
             </dd>
         </dl>
 
         <dl class="hang">
             <dt>手机号<span class="right_arrow"><i class="i_normal">!</i></span></dt>
             <dd>
-                <input class="text js_input_text eye_sightr_phone"></input>
+                <input type="button" class="text js_input_text eye_sight_phone"></input>
             </dd>
         </dl>
 
