--- a/bin/static/css/home.css
+++ b/bin/static/css/home.css
@@ -819,16 +819,17 @@ section.section_buttons li {
 }
 section.section_buttons li .tool_icon {
   width: 100%;
-  height: 0.8rem;
+  height: 0.2rem;
   text-align: center;
 }
 section.section_buttons li .tool_icon img {
-  width: 0.8rem;
-  height: 0.8rem;
+  width: 0.6rem;
+  height: 0.6rem;
 }
 section.section_buttons li .tool_name {
   text-align: center;
   line-height: 0.8rem;
+  font-size: 15px;
 }
 section.section_mid {
   width: 100%;
