--- a/bin/template/index.html
+++ b/bin/template/index.html
@@ -58,27 +58,27 @@
         <div class="clearfix"></div>
     </section>
 
-    <section class="section_buttons">
-        <ul>
-            <li class="js_add_user">
-                <div class="tool_icon"><img src="/static/img/ic_consumer_add.png"></div>
-                <div class="tool_name">新建客户</div>
-            </li>
-            <li class="js_user_history">
-                <div class="tool_icon"><img src="/static/img/ic_consumer_all.png"></div>
-                <div class="tool_name">客户历史</div>
-            </li>
-            <li class="js_check_record">
-                <div class="tool_icon"><img src="/static/img/ic_check_record.png"></div>
-                <div class="tool_name">检查录入</div>
-            </li>
-            <li class="js_search_user">
-                <div class="tool_icon"><img src="/static/img/ic_consumer_find.png"></div>
-                <div class="tool_name">客户搜索</div>
-            </li>
-            <div class="clearfix"></div>
-        </ul>
-    </section>
+    <!--<section class="section_buttons">-->
+        <!--<ul>-->
+            <!--<li class="js_add_user">-->
+                <!--<div class="tool_icon"><img src="/static/img/ic_consumer_add.png"></div>-->
+                <!--<div class="tool_name">新建客户</div>-->
+            <!--</li>-->
+            <!--<li class="js_user_history">-->
+                <!--<div class="tool_icon"><img src="/static/img/ic_consumer_all.png"></div>-->
+                <!--<div class="tool_name">客户历史</div>-->
+            <!--</li>-->
+            <!--<li class="js_check_record">-->
+                <!--<div class="tool_icon"><img src="/static/img/ic_check_record.png"></div>-->
+                <!--<div class="tool_name">检查录入</div>-->
+            <!--</li>-->
+            <!--<li class="js_search_user">-->
+                <!--<div class="tool_icon"><img src="/static/img/ic_consumer_find.png"></div>-->
+                <!--<div class="tool_name">客户搜索</div>-->
+            <!--</li>-->
+            <!--<div class="clearfix"></div>-->
+        <!--</ul>-->
+    <!--</section>-->
 
     <section class="section_bottom">
         <dl class="hang js_goto_record">
