--- a/bin/template/eye_sight.html
+++ b/bin/template/eye_sight.html
@@ -38,7 +38,7 @@
     </section>
 
     <section class="section_nothing">
-        <p>门店还没有相关试光师的信息</p>
+        <p>门店还没有相关视光师的信息</p>
     </section>
 </div>
 </body>
