--- a/bin/template/eye_sight_info.html
+++ b/bin/template/eye_sight_info.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>添加试光师</title>
+    <title>添加视光师</title>
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
     <meta content="yes" name="apple-mobile-web-app-capable">
@@ -17,7 +17,7 @@
     <section class="section_find">
         <ul>
             <li>
-                <input class="text js_input_text js_search_phone" type="text" value="" placeholder="请输入试光师手机号" />
+                <input class="text js_input_text js_search_phone" type="text" value="" placeholder="请输入视光师手机号" />
                 <div class="js_search">
                     <span>查找</span>
                 </div>
