--- a/bin/template/forget_pwd.html
+++ b/bin/template/forget_pwd.html
@@ -10,7 +10,7 @@
     <meta content="telephone=no" name="format-detection">
     <meta content="email=no" name="format-detection">
     <script type="text/javascript" src="/static/js/libs/flexible.debug.js"></script>
-    <link rel="stylesheet" href="../dist/css/uyu.css">
+    <link rel="stylesheet" href="/static/css/uyu.css">
 </head>
 <body>
 <div id="wap" class="js_regin_index">
