--- a/bin/template/forget_pwd.html
+++ b/bin/template/forget_pwd.html
@@ -24,7 +24,7 @@
         <dl class="hang fix_width">
             <dt>验证码</dt>
             <dd>
-                <input type="text_sms"  class="text js_sms_code" placeholder="请输入6位验证码(必填)" />
+                <input type="text"  class="text_sms js_sms_code" placeholder="6位验证码" />
                 <p class="entycode" id="get_identyCode">
                     <span class="get_entycode js_get_entycode">获取验证码</span>
                     <span class="show_entycode js_show_entycode">剩余<i class="i_normal">61</i>秒</span>
