--- a/bin/template/forget_pwd.html
+++ b/bin/template/forget_pwd.html
@@ -34,13 +34,13 @@
         <dl class="hang">
             <dt>新的密码</dt>
             <dd>
-                <input class="text js_new_pwd" type="text" placeholder="必填" />
+                <input class="text js_new_pwd" type="password" placeholder="必填" />
             </dd>
         </dl>
         <dl class="hang">
             <dt>确认密码</dt>
             <dd>
-                <input class="text js_sure_pwd" type="text" placeholder="必填" />
+                <input class="text js_sure_pwd" type="password" placeholder="必填" />
             </dd>
         </dl>
     </section>
