--- a/bin/template/register.html
+++ b/bin/template/register.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 <div id="wap" class="js_regin_index">
+    <p class="tips_msg">密码默认为手机号后6位</p>
     <section class="section_register">
         <dl class="hang">
             <dt>手机号</dt>
