--- a/bin/static/css/uyu.css
+++ b/bin/static/css/uyu.css
@@ -1365,6 +1365,7 @@ section.section_nothing p {
 .tips_msg {
   width: 100%;
   margin-top: 0.3rem;
+  padding: 0 0 0 15px;
   line-height: 1rem;
   text-align: left;
 }
