--- a/bin/template/register.html
+++ b/bin/template/register.html
@@ -14,7 +14,9 @@
 </head>
 <body>
 <div id="wap" class="js_regin_index">
+    <section class="section_header">
     <p class="tips_msg">密码默认为手机号后6位</p>
+    </section>
     <section class="section_register">
         <dl class="hang">
             <dt>手机号</dt>
