限制输入长度maxlength

--- a/bin/template/forget_pwd.html
+++ b/bin/template/forget_pwd.html
@@ -18,13 +18,13 @@
         <dl class="hang">
             <dt>手机号</dt>
             <dd>
-                <input class="text js_phone" type="text" placeholder="必填" />
+                <input class="text js_phone" type="text" placeholder="必填" maxlength="11"/>
             </dd>
         </dl>
         <dl class="hang fix_width">
             <dt>验证码</dt>
             <dd>
-                <input type="text"  class="text_sms js_sms_code" placeholder="4位验证码" />
+                <input type="text"  class="text_sms js_sms_code" placeholder="4位验证码" maxlength="4"/>
                 <p class="entycode" id="get_identyCode">
                     <span class="get_entycode js_get_entycode">获取验证码</span>
                     <span class="show_entycode js_show_entycode">剩余<i class="i_normal">61</i>秒</span>
@@ -34,13 +34,13 @@
         <dl class="hang">
             <dt>新的密码</dt>
             <dd>
-                <input class="text js_new_pwd" type="password" placeholder="6~18位密码" />
+                <input class="text js_new_pwd" type="password" placeholder="6~18位密码" maxlength="18"/>
             </dd>
         </dl>
         <dl class="hang">
             <dt>确认密码</dt>
             <dd>
-                <input class="text js_sure_pwd" type="password" placeholder="6~18位密码" />
+                <input class="text js_sure_pwd" type="password" placeholder="6~18位密码" maxlength="18"/>
             </dd>
         </dl>
     </section>
