--- a/bin/template/register.html
+++ b/bin/template/register.html
@@ -21,20 +21,20 @@
         <dl class="hang">
             <dt>手机号</dt>
             <dd>
-                <input class="text js_phone" type="text" placeholder="必填" />
+                <input class="text js_phone" type="text" placeholder="必填" maxlength="11"/>
             </dd>
         </dl>
 
         <dl class="hang">
             <dt>昵称</dt>
             <dd>
-                <input class="text js_nick_name" type="text" placeholder="必填" />
+                <input class="text js_nick_name" type="text" placeholder="必填" maxlength="12"/>
             </dd>
         </dl>
         <dl class="hang">
             <dt>用户姓名</dt>
             <dd>
-                <input class="text js_user_name" type="text" placeholder="必填" />
+                <input class="text js_user_name" type="text" placeholder="必填" maxlength="12"/>
             </dd>
         </dl>
         <dl class="hang">
