修改验证输入长短

--- a/bin/template/dis_consumer_info.html
+++ b/bin/template/dis_consumer_info.html
@@ -18,7 +18,7 @@
     <section class="section_find">
         <ul>
             <li>
-                <input class="text js_input_text js_search_phone" type="text" value="" placeholder="输入手机号或用户名" />
+                <input class="text js_input_text js_search_phone" type="text" maxlength="30" placeholder="输入手机号或用户名" />
                 <div class="js_search">
                     <span>查找</span>
                 </div>
@@ -44,7 +44,7 @@
         <dl class="hang">
             <dt class="js_shop_name_key">增加训练次数<span class="right_arrow"><i class="i_normal">!</i></span></dt>
             <dd>
-                <input class="text js_input_text consumer_buy_times" type="text" value="" placeholder="请输入次数" />
+                <input class="text js_input_text consumer_buy_times" type="text" maxlength="6" placeholder="请输入次数" />
             </dd>
         </dl>
     </section>
