--- a/bin/template/eye_sight_info.html
+++ b/bin/template/eye_sight_info.html
@@ -17,7 +17,7 @@
     <section class="section_find">
         <ul>
             <li>
-                <input class="text js_input_text js_search_phone" type="text" maxlength="11" placeholder="请输入视光师手机号" />
+                <input class="text js_input_text js_search_phone" type="text" maxlength="30" placeholder="请输入手机号或用户名" />
                 <div class="js_search">
                     <span>查找</span>
                 </div>
