--- a/bin/template/index.html
+++ b/bin/template/index.html
@@ -31,8 +31,8 @@
             <div class="stat_info statistics_title">本月</div>
             <div class="stat_info v_line_dev"><div class="line"></div></div>
             <div class="stat_info statistics_num">
-                <ul class="info_top">
-                    <li>已分配</li>
+                <ul>
+                    <li class="info_top">已分配</li>
                     <li><span id="month_distribute">0</span>次</li>
                 </ul>
             </div>
@@ -42,8 +42,8 @@
             <div class="stat_info statistics_title">今日</div>
             <div class="stat_info v_line_dev"><div class="line"></div></div>
             <div class="stat_info statistics_num">
-                <ul class="info_top">
-                    <li>已分配</li>
+                <ul>
+                    <li class="info_top">已分配</li>
                     <li><span id="day_distribute">0</span>次</li>
                 </ul>
             </div>
