去掉石光师页面的操作按钮

--- a/bin/template/eye_sight.html
+++ b/bin/template/eye_sight.html
@@ -25,14 +25,14 @@
                         <span class="es_phone">{{person.phone_num}}</span>
                     </div>
                 </div>
-                <div class="eye_sight_op">
-                    <div class="eye_sight_delete">
-                        <span class="edit_btn">删除</span>
-                    </div>
-                    <div class="eys_sight_cancel">
-                        <span class="edit_btn">取消</span>
-                    </div>
-                </div>
+                <!--<div class="eye_sight_op">-->
+                    <!--<div class="eye_sight_delete">-->
+                        <!--<span class="edit_btn">删除</span>-->
+                    <!--</div>-->
+                    <!--<div class="eys_sight_cancel">-->
+                        <!--<span class="edit_btn">取消</span>-->
+                    <!--</div>-->
+                <!--</div>-->
             </li>
         </ul>
     </section>
