添加检查录入

--- a/bin/template/index.html
+++ b/bin/template/index.html
@@ -87,14 +87,14 @@
             <dt>账单<br/><span class="grey">分成模式才有</span></dt>
             <dd><span class="arrow"></span></dd>
         </dl>
-        <dl class="hang js_goto_interview">
-            <dt>调查问卷<br/><span class="grey"></span></dt>
+        <dl class="hang js_goto_check_record">
+            <dt>检查录入<br/><span class="grey"></span></dt>
             <dd><span class="arrow"></span></dd>
         </dl>
-        <dl class="hang js_goto_about">
-            <dt>关于<br/><span class="grey"></span></dt>
-            <dd><span class="arrow"></span></dd>
-        </dl>
+        <!--<dl class="hang js_goto_about">-->
+            <!--<dt>关于<br/><span class="grey"></span></dt>-->
+            <!--<dd><span class="arrow"></span></dd>-->
+        <!--</dl>-->
 
     </section>
 
