修改分配列表

--- a/bin/template/dis_record.html
+++ b/bin/template/dis_record.html
@@ -20,6 +20,7 @@
                 <div class="record_dev record_icon"><img src="/static/img/ic_consumer_head.png"></div>
                 <div class="record_dev record_name">
                     <span class="consumer_name">{{oneDistribute.buyer}}</span>
+                    <span class="sight_name">视光师: {{oneDistribute.op_name}}</span>
                     <span class="buy_date">{{oneDistribute.create_time}}</span>
                     <div class="clearfix"></div>
                 </div>
