--- a/bin/static/css/uyu.css
+++ b/bin/static/css/uyu.css
@@ -999,16 +999,16 @@ section.section_record_list .record_dev {
   float: left;
 }
 section.section_record_list .record_icon {
-  margin: 0.6rem 15px 0.6rem 0;
-  width: 1rem;
-  height: 1rem;
+  margin: 0.7rem 15px 0.7rem 0;
+  width: 1.4rem;
+  height: 1.4rem;
   border-radius: 5px;
   border: 1px solid #e5e5e5;
   overflow: hidden;
 }
 section.section_record_list .record_icon img {
-  width: 1rem;
-  height: 1rem;
+  width: 1.4rem;
+  height: 1.4rem;
 }
 section.section_record_list .record_times {
   float: right;
@@ -1017,16 +1017,16 @@ section.section_record_list .record_times {
 section.section_record_list span {
   display: block;
   text-align: left;
-  line-height: 0.6rem;
+  line-height: 0.8rem;
 }
 section.section_record_list .consumer_name {
-  margin: 0.2rem 0 0;
+  margin: 0.2rem 0 ;
 }
 section.section_record_list .buy_times {
   margin: 0 auto;
   display: block;
   text-align: right;
-  line-height: 2.2rem;
+  line-height: 2.8rem;
 }
 section.section_dev_list li {
   height: 1.4rem;
