--- a/bin/template/index.html
+++ b/bin/template/index.html
@@ -88,7 +88,7 @@
             <dd><span class="arrow"></span></dd>
         </dl>
         <dl class="hang js_goto_check_record">
-            <dt>检查录入<br/><span class="grey">消费检查结果录入</span></dt>
+            <dt>检查录入<br/><span class="grey">客户检查结果录入</span></dt>
             <dd><span class="arrow"></span></dd>
         </dl>
         <!--<dl class="hang js_goto_about">-->
