--- a/bin/template/eye_sight.html
+++ b/bin/template/eye_sight.html
@@ -24,14 +24,10 @@
                         <span class="es_phone">{{person.phone_num}}</span>
                     </div>
                 </div>
-                <!--<div class="eye_sight_op">-->
-                    <!--<div class="eye_sight_delete">-->
-                        <!--<span class="edit_btn">删除</span>-->
-                    <!--</div>-->
-                    <!--<div class="eys_sight_cancel">-->
-                        <!--<span class="edit_btn">取消</span>-->
-                    <!--</div>-->
-                <!--</div>-->
+                <div class="eye_sight_delete">
+                    <span class="edit_btn">删除</span>
+                </div>
+                <div class="clearfix"></div>
             </li>
         </ul>
     </section>
