--- a/bin/template/eye_sight.html
+++ b/bin/template/eye_sight.html
@@ -23,6 +23,7 @@
                         <span class="es_name">{{person.username}}</span>
                         <span class="es_phone">{{person.phone_num}}</span>
                     </div>
+                    <div class="clearfix"></div>
                 </div>
                 <div class="eye_sight_delete">
                     <span class="edit_btn">删除</span>
