--- a/bin/template/eye_sight.html
+++ b/bin/template/eye_sight.html
@@ -15,7 +15,7 @@
 <body>
 <div id="wap" class="js_regin_index">
     <section class="section_list section_eye_sight">
-        <ul class="js_one">
+        <ol class="js_one">
             <li v-cloak v-for="person in eye_sights">
                 <div class="eye_sight">
                     <div class="eye_sight_icon"><img src="/static/img/ic_eye_sight.png"></div>
@@ -30,7 +30,7 @@
                 </div>
                 <div class="clearfix"></div>
             </li>
-        </ul>
+        </ol>
     </section>
 
     <section class="section_nothing">
