--- a/bin/template/eye_sight.html
+++ b/bin/template/eye_sight.html
@@ -15,8 +15,8 @@
 <body>
 <div id="wap" class="js_regin_index">
     <section class="section_list section_eye_sight">
-        <ol class="js_one">
-            <li v-cloak v-for="person in eye_sights">
+        <tr class="js_one">
+            <td v-cloak v-for="person in eye_sights">
                 <div class="eye_sight">
                     <div class="eye_sight_icon"><img src="/static/img/ic_eye_sight.png"></div>
                     <div class="eye_sight_info">
@@ -29,8 +29,8 @@
                     <span class="edit_btn" @click="unbindEyeSight($index)">解绑</span>
                 </div>
                 <div class="clearfix"></div>
-            </li>
-        </ol>
+            </td>
+        </tr>
     </section>
 
     <section class="section_nothing">
