--- a/bin/template/eye_sight.html
+++ b/bin/template/eye_sight.html
@@ -15,8 +15,8 @@
 <body>
 <div id="wap" class="js_regin_index">
     <section class="section_list section_eye_sight">
-        <tr class="js_one">
-            <td v-cloak v-for="person in eye_sights">
+        <ol class="js_one">
+            <li v-cloak v-for="person in eye_sights" @click="unbindEyeSight($index)">
                 <div class="eye_sight">
                     <div class="eye_sight_icon"><img src="/static/img/ic_eye_sight.png"></div>
                     <div class="eye_sight_info">
@@ -26,11 +26,11 @@
                     <div class="clearfix"></div>
                 </div>
                 <div class="eye_sight_delete">
-                    <span class="edit_btn" @click="unbindEyeSight($index)">解绑</span>
+                    <span class="edit_btn">解绑</span>
                 </div>
                 <div class="clearfix"></div>
-            </td>
-        </tr>
+            </li>
+        </ol>
     </section>
 
     <section class="section_nothing">
