--- a/bin/template/eye_sight.html
+++ b/bin/template/eye_sight.html
@@ -25,8 +25,8 @@
                     </div>
                     <div class="clearfix"></div>
                 </div>
-                <div class="eye_sight_delete" v-on:click="unbindEyeSight">
-                    <span class="edit_btn">解绑</span>
+                <div class="eye_sight_delete">
+                    <span class="edit_btn" v-on:click="unbindEyeSight">解绑</span>
                 </div>
                 <div class="clearfix"></div>
             </li>
