--- a/bin/template/eye_sight.html
+++ b/bin/template/eye_sight.html
@@ -16,7 +16,7 @@
 <div id="wap" class="js_regin_index">
     <section class="section_list section_eye_sight">
         <ul class="js_one">
-            <li v-cloak v-for="(person, index) in eye_sights" data-index="{{index}}">
+            <li v-cloak v-for="(person, index) in eye_sights">
                 <div class="eye_sight">
                     <div class="eye_sight_icon"><img src="/static/img/ic_eye_sight.png"></div>
                     <div class="eye_sight_info">
@@ -27,6 +27,7 @@
                 </div>
                 <div class="eye_sight_delete">
                     <span class="edit_btn" v-on:click="unbindEyeSight">解绑</span>
+                    <div class="index_span">{{index}}</div>
                 </div>
                 <div class="clearfix"></div>
             </li>
