--- a/bin/template/dev.html
+++ b/bin/template/dev.html
@@ -24,7 +24,7 @@
         </ul>
     </section>
     <section class="section_nothing">
-        <p>门店还没有相关设备信息</p>
+        <div>门店还没有相关设备信息</div>
     </section>
 
 </div>
