--- a/bin/template/dis_record.html
+++ b/bin/template/dis_record.html
@@ -32,7 +32,7 @@
         </ul>
     </section>
     <section class="section_nothing">
-        <p>门店还没有相关分配信息</p>
+        <div>门店还没有相关分配信息</div>
     </section>
 </div>
 </body>
