--- a/bin/template/bill.html
+++ b/bin/template/bill.html
@@ -35,7 +35,7 @@
 
     </section>
     <section class="section_nothing">
-        <p>门店还没有相关结算信息</p>
+        <div>门店还没有相关结算信息</div>
     </section>
 </div>
 
