--- a/bin/template/eye_sight.html
+++ b/bin/template/eye_sight.html
@@ -34,7 +34,7 @@
     </section>
 
     <section class="section_nothing">
-        <p>门店还没有相关视光师的信息</p>
+        <div>门店还没有相关视光师的信息</div>
     </section>
 </div>
 </body>
