--- a/bin/static/css/uyu.css
+++ b/bin/static/css/uyu.css
@@ -1342,13 +1342,14 @@ section.section_nothing {
   margin: 0 auto;
   display: none;
   width: 100%;
-  background-color: #00aba9;
 }
 section.section_nothing div {
   margin: 0 auto;
   width: 100%;
+  height: 1.2rem;
   line-height: 1.2rem;
   color: #A7A9AE;
+  text-align: center;
 }
 section.section_header {
   width: 100%;
