--- a/bin/template/dev.html
+++ b/bin/template/dev.html
@@ -24,7 +24,7 @@
         </ul>
     </section>
     <section class="section_nothing">
-        <div>门店还没有相关设备信息</div>
+        <div>该门店没有更多设备信息</div>
     </section>
 
 </div>
