--- a/bin/static/css/uyu.css
+++ b/bin/static/css/uyu.css
@@ -1033,18 +1033,18 @@ section.section_dev_list li {
 }
 section.section_dev_list span {
   display: block;
-  margin: 0 0;
-  width: 50%;
   height: 1.8rem;
   line-height: 1.8rem;
   float: left;
 }
 section.section_dev_list .device_name {
   text-align: left;
+  width: 60%;
 }
 section.section_dev_list .device_status {
   text-align: right;
-  padding-right: 15px;
+  width: 35%;
+  padding-right: 5%;
 }
 section.section_eye_sight .eye_sight {
   width: 80%;
