首页添加检查记录

--- a/bin/template/index.html
+++ b/bin/template/index.html
@@ -91,6 +91,10 @@
             <dt>检查录入<br/><span class="grey">客户检查结果录入</span></dt>
             <dd><span class="arrow"></span></dd>
         </dl>
+        <dl class="hang js_goto_check_history">
+            <dt>检查记录<br/><span class="grey">查看检查结果、导出检查表</span></dt>
+            <dd><span class="arrow"></span></dd>
+        </dl>
         <!--<dl class="hang js_goto_about">-->
             <!--<dt>关于<br/><span class="grey"></span></dt>-->
             <!--<dd><span class="arrow"></span></dd>-->
